force-app/main/default/objects/Test_Object1__c/fields/Test_formula__c.field-meta.xml
<CustomField>
    <fullName>Test_formula__c</fullName>
    <formula>&quot;Nelson &quot; + &quot;Samuel&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test formula</label>
    <type>Text</type>
</CustomField>