force-app/main/default/objects/Test_Object1__c/fields/Test_picklist_1__c.field-meta.xml
<CustomField>
    <fullName>Test_picklist_1__c</fullName>
    <description>Used to test deploy in picklist</description>
    <label>Test picklist 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>