force-app/main/default/objects/Test_Object1__c/fields/Test_picklist_2__c.field-meta.xml
<CustomField>
    <fullName>Test_picklist_2__c</fullName>
    <label>Test picklist 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Test_picklist_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
            <value>
                <fullName>33</fullName>
            </value>
            <value>
                <fullName>44</fullName>
            </value>
            <value>
                <fullName>55</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>