force-app/main/default/objects/Test_Object1__c/recordTypes/Test_Record_Layout.recordType-meta.xml
<RecordType>
    <fullName>Test_Record_Layout</fullName>
    <active>true</active>
    <label>Test Record Layout</label>
</RecordType>