force-app/main/default/objects/Test_Object1__c/validationRules/Test_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Test_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Test_picklist_1__c, &quot;3&quot;)</errorConditionFormula>
    <errorMessage>Not in 3 picklist</errorMessage>
</ValidationRule>